# ipod-music-exporter

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
scripts/: build-via-docker.sh  build.sh
src/: main-export-manifest.cpp  main-export-music.js
